# Simple3DModelLoader

./: .clang-tidy  .gitignore  .gitmodules  .gitmodules.bak  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: gl.h  vulkan.h
glad/src/: gl.c  vulkan.c
libs/assimp/libs/: assimp-vc143-mtd.lib
libs/glad/include/glad/: gl.h
libs/zlib/include/: zconf.h
resources/models/: newcube.mtl  test-cube.glb
resources/models/cube/: cube.mtl
resources/models/wall_window/: wall_window_material.mtl
resources/shaders/: fragment.glsl  fragment2.glsl  fragment3D.glsl  fragmentModel.glsl  vertex.glsl  vertex2D.glsl  vertexModel.glsl
src/: Camera.cpp  Camera.hpp  Component.hpp  FakeObjects.hpp  FileReader.cpp  FileReader.hpp  GameObject.cpp  GameObject.hpp  GlHelper.cpp  GlHelper.hpp  IO.cpp  IO.hpp  KeyCode.hpp  Material.cpp  Material.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ModelLoader.cpp  ModelLoader.hpp  NewMesh.cpp  NewMesh.hpp  Renderer.cpp  Renderer.hpp  ResourceRepo.hpp  Scene.cpp  Scene.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Transform.hpp  Triangle.cpp  Triangle.hpp  main.cpp
src/IO/: IO.cpp  IO.hpp  ModelLoader.cpp  ModelLoader.hpp
src/asyncoperations/: LoadOBJModelOperation.cpp  LoadOBJModelOperation.hpp  ReadImageOperation.cpp  ReadImageOperation.hpp  ReadOperation.cpp  ReadOperation.hpp
src/data/: Mesh.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vertex.hpp
src/obj-loading/: LoadFastObjMeshOperation.cpp  LoadFastObjMeshOperation.hpp
src/renderer/: MeshRenderer.cpp  MeshRenderer.hpp  Renderer.hpp
src/rendering/: GLCube.cpp  GLRectangle.cpp  GLTriangle.cpp  Rectangle.cpp  Rectangle.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Triangle.cpp  Triangle.hpp
src/rendering/structures/: Index.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelTexture.hpp  NewMaterial.cpp  NewMaterial.hpp  OBJModel.cpp  OBJModel.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/scene/: GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
src/shaders/: ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp
src/shapes/: FakeObjects.hpp  GLCube.cpp  GLCube.hpp  GLRectangle.cpp  GLRectangle.hpp  GLTriangle.cpp  GLTriangle.hpp
src/structures/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Texture.hpp
src/window/: Window.cpp  Window.hpp
src/window/impl/: GlfwImpl.cpp  GlfwImpl.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Win32Window.cpp  Win32Window.hpp
unused-snippets/: fast_obj_parse.txt
